tests/functional/lang/parse-fail-url.err.exp
error: URL literals are disabled
       at «stdin»:1:1:
            1| http://example.org
             | ^
            2|
